fix(NavBar): ensure links in dropdown menu are center-aligned

--- a/src/components/Navigation/NavBar.module.scss
+++ b/src/components/Navigation/NavBar.module.scss
@@ -67,5 +67,6 @@
 
   a {
     padding: var(--mantine-spacing-xs);
+    text-align: center;
   }
 }
